<resources>

    <string name="app_name">day_01</string>
    <string name="hello_world">欢迎使用</string>
    <string name="user_name">用户名：</string>
    <string name="user_pwd">密码：</string>
    <string name="login">登陆</string>
    <string name="regist">注册</string>
    <string name="exit">注销登录</string>
    <string name="find">找回密码</string>
    <string name="user_id">853049349@qq.com</string>
    <string name="please_input">Please Input</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

</resources>